# grpc_async_bidirectional_stream_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.linux.sh  dep.linux.sh  dep.win.md  gen_pb.bat  gen_pb.sh  gen_vs_sln.bat
dep/grpc/lib/: libz.so.1.2.11
dep/grpc/lib/cmake/grpc/: gRPCConfig.cmake  gRPCConfigVersion.cmake  gRPCTargets-release.cmake  gRPCTargets.cmake
dep/grpc/lib/pkgconfig/: absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_btree.pc  absl_city.pc  absl_civil_time.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_core_headers.pc  absl_counting_allocator.pc  absl_debugging.pc  absl_debugging_internal.pc  absl_demangle_internal.pc  absl_dynamic_annotations.pc  absl_endian.pc  absl_errno_saver.pc  absl_examine_stack.pc  absl_exponential_biased.pc  absl_failure_signal_handler.pc  absl_fast_type_id.pc  absl_fixed_array.pc  absl_flags.pc  absl_flags_commandlineflag.pc  absl_flags_commandlineflag_internal.pc  absl_flags_config.pc  absl_flags_internal.pc  absl_flags_marshalling.pc  (+91 more)
dep/grpc/lib64/cmake/absl/: abslConfigVersion.cmake  abslTargets-release.cmake  abslTargets.cmake
dep/grpc/lib64/cmake/c-ares/: c-ares-targets-release.cmake  c-ares-targets.cmake
dep/grpc/lib64/cmake/protobuf/: protobuf-config-version.cmake  protobuf-module.cmake  protobuf-targets-release.cmake  (+1 more)
dep/grpc/lib64/pkgconfig/: libcares.pc  protobuf-lite.pc  protobuf.pc
dep/grpc/share/pkgconfig/: zlib.pc
dep/openssl/lib/: libcrypto.so.1.1  libssl.so.1.1
dep/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
dep/spdlog/include/spdlog/: common-inl.h  common.h  logger.h  tweakme.h
proto/: test.proto
src/: Msg_TestService_Stream.hpp  Msg_TestService_Stream2.hpp  main.cpp
src/internal/: cmdline.h  context.cpp  context.hpp  log.hpp  msg.cpp  msg.hpp  msg.ipp  server.cpp  server.hpp  tag.cpp  tag.hpp  util.cpp  util.hpp
src/proto/: test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h
test/client/: gen_pb.bat  go.mod  main.go
test/client/test/: test.pb.go  test_grpc.pb.go
test/client2/: gen_pb.sh  go.mod  go.sum  main.go
test/client2/test/: test.pb.go  test_grpc.pb.go
(+1073 files in other folders)
